--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -21,7 +21,7 @@
       <input id="txt" autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="Type your message here..." /><button>Send</button>
     </form>
     <script>
-            var socket = io.connect('http://localhost:8080'); // this has to connect to the IP when possible
+            var socket = io.connect('https://lookup-sumuk.herokuapp.com:8080'); // this has to connect to the IP when possible
             // submit text message without reload/refresh the page
             $('form').submit(function(e){
                 e.preventDefault(); // prevents page reloading
